<resources>
    <string name="app_name">GarbOut</string>
    <string name="todo">TODO</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_a_account_login_linearlayout"><![CDATA[Already have a account?Login/> </LinearLayout>]]></string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or">or</string>
    <string name="create_new_account">Create new account?</string>
    <string name="already_have_a_account_signup">Already have a account?Signup</string>
    <string name="name">Name</string>
    <string name="my_profile">My Profile</string>
    <string name="how_can_assist_you">How can assist you?</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_app">Share App</string>
    <string name="grabout">GrabOUt</string>
    <string name="login">Login</string>
    <string name="add_complain">Add Complain</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_to_continue">Sign to continue</string>
    <string name="email">EMAIL</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_create_a_new_account">Don\'t have an account?Create a new account</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="schedule">Schedule</string>
    <string name="settings">Settings</string>
    <string name="guide">Guide</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="garbout">GarbOut</string>
    <string name="step_forward_to_clean_and_green_the_city">Step forward to clean and green the city</string>
    <string name="my_complain">My Complain</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <!--string name="next">Next</string-->
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="next">Next</string>
    <string name="abidhussain_gmail_com">abidhussain@gmail.com</string>
    <string name="abid_hussain">Abid Hussain</string>
    <string name="title_activity_maps">Map</string>
    <string name="open_drawer">navigation_open</string>
    <string name="close_drawer">navigation_close</string>
    <string name="title_activity_naveee">naveee</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_user_maps">Map</string>
    <string name="title_activity_user_map">Map</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>